tests/valid_inputs/assign_xor.cpp
// test '^='

int main() {
	int a = 40;
	return a ^= 2;
}
