tests/invalid_inputs/sema/class_method_same_name_as_field.cpp

struct S {
	int a;
	void a() {}
};
